[package]
name = "future_gadget_laboratory"
version = "0.0.1048596"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.83"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }

[lib]
proc-macro = true
